# DeepEnv

./: .gitignore  AMENDMENT_TO_EUPL_ license.md  LICENCE.md  README.md  pyproject.toml
DeepEnv/: __init__.py  estimator.py  fuel_estimator.py  set_estimator.py  utils.py
DeepEnv/models/SET/SET_A320_V0.1/classifier/: fingerprint.pb  saved_model.pb
DeepEnv/models/SET/SET_A320_V0.1/classifier/variables/: variables.index
DeepEnv/models/SET/SET_A320_V0.1/regressor/: fingerprint.pb  saved_model.pb
DeepEnv/models/SET/SET_A320_V0.1/regressor/variables/: variables.index
DeepEnv/training/DeepContrails/config/: default_config.py
DeepEnv/training/DeepContrails/image_utils/: image_augmentor.py  image_processing.py
DeepEnv/training/DeepContrails/loss/: loss.py
DeepEnv/training/DeepContrails/ml_utils/: submission_manager.py  torch_data_loader.py  torch_generator.py  torch_optimizer.py  torch_scheduler.py  torch_segmentation_trainer.py
DeepEnv/training/DeepContrails/models/: lightning_model.py  models.py
DeepEnv/training/DeepContrails/utils/: init_config_enhancer.py  typing_utils.py
examples/: example_flight.csv  fuel_estimation.ipynb
examples/fuel_estimator/: example.ipynb  example_flight.csv
examples/fuel_models/: fuel_estimation.ipynb
examples/set_estimator/: example.ipynb  example_flight.csv
